# Panther

./: LICENSE  README.md
.github/assets/: PLACEHOLDER_GUIDE.md
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  context.rs  context_builder.rs  file_tracker.rs  heartbeat.rs  lib.rs  loop.rs  memory.rs  session.rs  subagent.rs
crates/agent/src/cron/: mod.rs  service.rs  types.rs
crates/agent/src/tools/: capture.rs  clipboard.rs  cron.rs  exec.rs  filesystem.rs  mcp.rs  message.rs  mod.rs  registry.rs  send_file.rs  skill.rs  spawn.rs  system_info.rs  web.rs
crates/bot/: Cargo.toml
crates/bot/src/: bot.rs  commands.rs  discord_bot.rs  dispatcher.rs  downloader.rs  handlers.rs  lib.rs
crates/bot/src/channels/: cli.rs  discord.rs  email.rs  matrix.rs  mod.rs  slack.rs  telegram.rs
crates/context-engine/: Cargo.toml
crates/context-engine/src/: engine.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: bootstrap.rs  config.rs  installer.rs  main.rs  setup.rs  shutdown.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: history.rs  lib.rs  profile.rs  skills.rs  store.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  cohere.rs  deepseek.rs  gemini.rs  groq.rs  interface.rs  lib.rs  mistral.rs  oai_common.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs  router.rs  together.rs  transcription.rs  xai.rs
crates/shared/: Cargo.toml
crates/shared/src/: bus.rs  channel.rs  errors.rs  events.rs  lib.rs  types.rs
crates/skill-runner/: Cargo.toml
crates/skill-runner/src/: executor.rs  lib.rs  runner.rs  sandbox.rs
