[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
memory = { path = "../memory" }
providers = { path = "../providers" }
mcp = { path = "../mcp" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
cron = "0.12"
chrono-tz = { version = "0.9", features = ["serde"] }
