[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
memory = { path = "../memory" }
providers = { path = "../providers" }
skill-runner = { path = "../skill-runner" }
agent = { path = "../agent" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
teloxide = { version = "0.12", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio-util = { version = "0.7", features = ["io"] }
dirs = "5"
base64 = "0.22"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder", "hostname"] }
mail-parser = "0.9"
html2text = "0.6"
rustyline = "13"
crossterm = "0.27"
