[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "panther"
path = "src/main.rs"

[[bin]]
name = "panther-install"
path = "src/installer.rs"

[dependencies]
shared = { path = "../shared" }
memory = { path = "../memory" }
providers = { path = "../providers" }
skill-runner = { path = "../skill-runner" }
agent = { path = "../agent" }
bot = { path = "../bot" }
context-engine = { path = "../context-engine" }
mcp = { path = "../mcp" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
toml = "0.8"
ctrlc = { version = "3", features = ["termination"] }
dialoguer = { version = "0.11", features = ["password"] }
atty = "0.2"
